--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 git+https://github.com/Rapptz/discord.py@faffc8eeb2ca06cae60b726fa873e474a51ac39b#egg=discord.py[voice]
 aiosqlite
 python-dotenv
+travitia_talk
