--- a/units/potato_bot.service
+++ b/units/potato_bot.service
@@ -4,10 +4,10 @@ Description=PotatoBot Discord bot
 [Service]
 TimeoutStartSec=0
 Restart=always
-ExecStartPre=-/bin/docker build /srv/potato_bot -t potato_bot/potato_bot
-ExecStartPre=-/bin/docker stop %n
-ExecStartPre=-/bin/docker rm %n
-ExecStart=/bin/docker run --name %n --rm \
+ExecStartPre=-/usr/bin/podman build /srv/potato_bot -t potato_bot/potato_bot
+ExecStartPre=-/usr/bin/podman stop %n
+ExecStartPre=-/usr/bin/podman rm %n
+ExecStart=/usr/bin/podman run --name %n --rm \
     -v /srv/potato_bot/db.sqlite:/code/db.sqlite \
     --env-file /srv/potato_bot/.env potato_bot/potato_bot
 
