Drop accent forcing code

--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=NTU2NTI4MDcwNjMxMjI3NDAy.XI1xJF.xl6iW44dagmEjnZVjzBHTL_w-pM
 BOT_PREFIX=!
-ADMIN_ROLE_ID=774234550830104596
+TRAVITIA_API_TOKEN=".3?fD?ZGJ(a4B9,'DK(J"
