Mount entire directory for the ease of updates

--- a/units/potato_bot.service
+++ b/units/potato_bot.service
@@ -8,7 +8,7 @@ ExecStartPre=-/usr/bin/docker build /srv/potato_bot -t potato_bot/potato_bot
 ExecStartPre=-/usr/bin/docker stop %n
 ExecStartPre=-/usr/bin/docker rm %n
 ExecStart=/usr/bin/docker run --name %n --rm \
-    -v /srv/potato_bot/db.sqlite:/code/db.sqlite \
+    -v /srv/potato_bot:/code \
     --env-file /srv/potato_bot/.env potato_bot/potato_bot
 
 [Install]
